--- a/OpenGL_Framework_NewBeginning/OpenGL_Framework/OpenGL_Framework.vcxproj.filters
+++ b/OpenGL_Framework_NewBeginning/OpenGL_Framework/OpenGL_Framework.vcxproj.filters
@@ -1,10 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
-    <Filter Include="Файлы исходного кода">
-      <UniqueIdentifier>{4FC737F1-C7A5-4376-A066-2A32D752A2FF}</UniqueIdentifier>
-      <Extensions>cpp;c;cc;cxx;def;odl;idl;hpj;bat;asm;asmx</Extensions>
-    </Filter>
     <Filter Include="Заголовочные файлы">
       <UniqueIdentifier>{93995380-89BD-4b04-88EB-625FBE52EBFB}</UniqueIdentifier>
       <Extensions>h;hh;hpp;hxx;hm;inl;inc;xsd</Extensions>
@@ -15,6 +11,13 @@
     <Filter Include="Заголовочные файлы\Shaders">
       <UniqueIdentifier>{69f8ad34-3e91-422d-9063-a3cadacb0bb9}</UniqueIdentifier>
     </Filter>
+    <Filter Include="Заголовочные файлы\System">
+      <UniqueIdentifier>{6fadf5e0-1dd1-42db-a2b2-32d0aacc1d02}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Файлы исходного кода">
+      <UniqueIdentifier>{4FC737F1-C7A5-4376-A066-2A32D752A2FF}</UniqueIdentifier>
+      <Extensions>cpp;c;cc;cxx;def;odl;idl;hpj;bat;asm;asmx</Extensions>
+    </Filter>
     <Filter Include="Файлы исходного кода\Shaders">
       <UniqueIdentifier>{62fffc74-606f-49a8-9784-837ccf8e9032}</UniqueIdentifier>
     </Filter>
@@ -23,9 +26,6 @@
     </Filter>
     <Filter Include="Файлы исходного кода\System">
       <UniqueIdentifier>{babe1972-dbfb-4363-9519-5c85a037ea61}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="Заголовочные файлы\System">
-      <UniqueIdentifier>{6fadf5e0-1dd1-42db-a2b2-32d0aacc1d02}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
   <ItemGroup>
@@ -83,6 +83,9 @@
     <ClInclude Include="LightSources.h">
       <Filter>Заголовочные файлы\Shaders</Filter>
     </ClInclude>
+    <ClInclude Include="SkyBox.h">
+      <Filter>Заголовочные файлы\System</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Shader.cpp">
@@ -135,6 +138,9 @@
     </ClCompile>
     <ClCompile Include="LightSources.cpp">
       <Filter>Файлы исходного кода\Shaders</Filter>
+    </ClCompile>
+    <ClCompile Include="SkyBox.cpp">
+      <Filter>Файлы исходного кода\System</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
