--- a/OpenGL_Framework_NewBeginning/OpenGL_Framework/OpenGL_Framework.vcxproj
+++ b/OpenGL_Framework_NewBeginning/OpenGL_Framework/OpenGL_Framework.vcxproj
@@ -84,6 +84,7 @@
   <ItemGroup>
     <ClInclude Include="Camera.h" />
     <ClInclude Include="Component.h" />
+    <ClInclude Include="GeneratedMesh.h" />
     <ClInclude Include="Graphics.h" />
     <ClInclude Include="LightShader.h" />
     <ClInclude Include="LightSources.h" />
@@ -95,8 +96,10 @@
     <ClInclude Include="resource.h" />
     <ClInclude Include="Shader.h" />
     <ClInclude Include="SkyBox.h" />
+    <ClInclude Include="SkyboxMesh.h" />
     <ClInclude Include="StandardShader.h" />
     <ClInclude Include="stb_image.h" />
+    <ClInclude Include="Terrain.h" />
     <ClInclude Include="Texture.h" />
     <ClInclude Include="Transform.h" />
     <ClInclude Include="VerticesBlockT.h" />
@@ -104,6 +107,7 @@
   <ItemGroup>
     <ClCompile Include="Camera.cpp" />
     <ClCompile Include="Component.cpp" />
+    <ClCompile Include="GeneratedMesh.cpp" />
     <ClCompile Include="Graphics.cpp" />
     <ClCompile Include="LightShader.cpp" />
     <ClCompile Include="LightSources.cpp" />
@@ -115,8 +119,10 @@
     <ClCompile Include="Model.cpp" />
     <ClCompile Include="Shader.cpp" />
     <ClCompile Include="SkyBox.cpp" />
+    <ClCompile Include="SkyboxMesh.cpp" />
     <ClCompile Include="StandardShader.cpp" />
     <ClCompile Include="stb_image.c" />
+    <ClCompile Include="Terrain.cpp" />
     <ClCompile Include="Texture.cpp" />
     <ClCompile Include="Transform.cpp" />
     <ClCompile Include="VerticesBlockT.cpp" />
