--- a/OpenGL_Framework_NewBeginning/OpenGL_Framework/OpenGL_Framework.vcxproj.filters
+++ b/OpenGL_Framework_NewBeginning/OpenGL_Framework/OpenGL_Framework.vcxproj.filters
@@ -102,6 +102,9 @@
       <Filter>Заголовочные файлы</Filter>
     </ClInclude>
     <ClInclude Include="ReflectiveShader.h">
+      <Filter>Заголовочные файлы\Shaders</Filter>
+    </ClInclude>
+    <ClInclude Include="RefractiveShader.h">
       <Filter>Заголовочные файлы</Filter>
     </ClInclude>
   </ItemGroup>
@@ -176,6 +179,9 @@
       <Filter>Файлы исходного кода</Filter>
     </ClCompile>
     <ClCompile Include="ReflectiveShader.cpp">
+      <Filter>Файлы исходного кода\Shaders</Filter>
+    </ClCompile>
+    <ClCompile Include="RefractiveShader.cpp">
       <Filter>Файлы исходного кода</Filter>
     </ClCompile>
   </ItemGroup>
